--- a/src/css/popup-fenix.css
+++ b/src/css/popup-fenix.css
@@ -32,7 +32,7 @@ a {
         fill: var(--ink-1);
     text-decoration: none;
     }
-:focus {
+:focus:not(:focus-visible) {
     outline: 0;
     }
 
